# ha-pwsproto

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  station.py
src/pwsproto/: ha_http_client.py  probe.py  pws_request.py  server.py  station.py
test/: test_conversions.py  test_measurement.py  test_pws_request.py  test_server.py  test_station.py
