[project]
name = "pwsproto"
version = "0.0.1"
dependencies = [
  "bottle",
  "homeassistant",
]
authors = [
  {name = "Corentin Ferry", email = "corentin.ferry@cferr.fr"},
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = [
  "src",
  "test"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
